--- a/.github/workflows/Update-Rules.yml
+++ b/.github/workflows/Update-Rules.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Git push assets to Github
         run: |
           git init
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "lkjpoikk@163.com"
+          git config --local user.name "guandasheng"
           git branch -m master
           git add --all
           git commit -m "Updated at $(TZ=UTC-8 date +'%Y-%m-%d %H:%M:%S')（北京时间）"
